--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
-    "@mui/styled-engine-sc": "^5.12.0",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -25,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "styled-components": "^6.0.0-rc.1",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
