--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.8.0",
     "react-image-gallery": "^1.2.11",
     "react-modern-drawer": "^1.2.0",
+    "recharts": "^2.6.2",
     "styled-components": "^6.0.0-rc.1",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
